# RP2x-devcontainer

./: .editorconfig  Dockerfile  LICENSE  README.md
.github/workflows/: CI.yml
dotfiles/.config/fish/: config.fish
dotfiles/.config/fish/functions/: fish_prompt.fish  fish_right_prompt.fish
test/blinky/: Cargo.toml
test/blinky/.cargo/: config.toml
test/blinky/src/: main.rs
